--- a/templates/index.html
+++ b/templates/index.html
@@ -9,22 +9,23 @@
     </div>
 
     {% for type in types %}
-    <div class="mb-6">
-        <div class="custom-blue text-white px-4 py-3 font-bold">
-            {{ type.plural|upper() }}
-        </div>
-        <div class="bg-white border border-gray-200">
-            {% for item in type.items %}
-                {% if item in items %}
+        {% set valid_items = type.items | select("in", items) | list %}
+        {% if valid_items|length > 0 %}
+        <div class="mb-6">
+            <div class="custom-blue text-white px-4 py-3 font-bold">
+                {{ type.plural|upper() }}
+            </div>
+            <div class="bg-white border border-gray-200">
+                {% for item in valid_items %}
                     <a href="/text/{{item.id}}" class="block p-4 {% if not loop.last %}border-b border-gray-200{% endif %} hover:bg-gray-50 transition-colors cursor-pointer">
                         <h3 class="font-bold text-gray-800 mb-2">{{ item.title }}</h3>
                         <p class="text-sm text-gray-600 mb-1">{{ type.singular|capitalize() }} {{ item.identifier }}</p>
                         <p class="text-sm text-blue-600">{{ item.description }}</p>
                     </a>
-                {% endif %}
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
-    </div>
+        {% endif %}
     {% endfor %}
 </div>
 {% endblock %}
