--- a/templates/text.html
+++ b/templates/text.html
@@ -22,7 +22,7 @@
         <!-- Text Header -->
         <div class="mb-6">
             <h3 class="text-lg font-bold text-gray-800 mb-2">{{ data.type.singular|capitalize() }} {{ data.identifier }}</h3>
-            <p class="text-base text-gray-600 mb-4">{{ data.description }}</p>
+            <p class="text-base text-gray-600 mb-4 font-semibold">{{ data.description }}</p>
         </div>
 
         <!-- Text Content -->
