--- a/templates/admin_create.html
+++ b/templates/admin_create.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Admin Dashboard | Create Document</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="/static/tailwindcss.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen p-6">
   <div class="max-w-7xl mx-auto">
