--- a/templates/text.html
+++ b/templates/text.html
@@ -12,7 +12,7 @@
 
     <!-- Title Section -->
     <div class="flex items-center justify-between mb-6">
-        <h1 class="text-3xl font-bold text-blue-800">Legislación y Avisos Oficiales</h1>
+        <h1 class="text-3xl font-bold text-blue-800">Legislation and Official noticies</h1>
     </div>
     <!-- Main Content -->
     <div>
