--- a/templates/admin_create.html
+++ b/templates/admin_create.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Admin Dashboard | Create Document</title>
+  <title>Admin Panel | Create Document</title>
   <script src="/static/tailwindcss.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen p-6">
